@@ -37,6 +37,7 @@ OPENSEADRAGON CHANGELOG
     * Viewport.open supports positioning config properties
 * Margins option to push the home region in from the edges of the Viewer (#505)
 * Rect and Point toString() functions are now consistent: rounding values to nearest hundredth
+* Overlays appear in the DOM immediately on open or addOverlay (#507)
 
 1.2.0: (in progress)
 
